# pyzantine

./: .gitignore  README.md  pyproject.toml  settings.py
pyzantine/: main.py
pyzantine/create/: api.py
pyzantine/file_ops/: api.py
pyzantine/source_imgs/process/: api.py
tests/: test_pyzantine.py
tests/test_data/good_test_data/: non_jpg_file.txt
